--- a/package.json
+++ b/package.json
@@ -1,23 +1,42 @@
 {
-  "name": "nextjs-blog",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "latest",
-    "react-dom": "latest",
-    "next": "latest"
-  },
-  "devDependencies": {
-    "autoprefixer": "latest",
-    "postcss": "latest",
-    "tailwindcss": "latest",
-    "eslint": "latest",
-    "eslint-config-next": "latest"
-  }
+    "name": "nextjs-blog",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "react": "latest",
+        "react-dom": "latest",
+        "next": "latest"
+    },
+    "devDependencies": {
+        "autoprefixer": "latest",
+        "postcss": "latest",
+        "tailwindcss": "latest",
+        "eslint": "latest",
+        "eslint-config-next": "latest",
+        "@dotlottie/react-player": "^1.2.1",
+        "@supabase/auth-helpers-nextjs": "^0.7.4",
+        "@tailwindcss/forms": "^0.5.5",
+        "@tailwindcss/typography": "^0.5.9",
+        "contentlayer": "^0.3.4",
+        "date-fns": "^2.30.0",
+        "github-slugger": "^2.0.0",
+        "next": "13.4.19",
+        "next-contentlayer": "^0.3.4",
+        "next-sitemap": "^4.2.2",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-hook-form": "^7.45.4",
+        "reading-time": "^1.5.0",
+        "rehype-autolink-headings": "^6.1.1",
+        "rehype-pretty-code": "^0.10.0",
+        "rehype-slug": "^5.1.0",
+        "remark-gfm": "^3.0.1",
+        "shiki": "^0.14.3"
+    }
 }
